bk_ida/gccida/g1/scan_loop
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1082:4: error: expected ';' after expression
rtx start; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1082:5: error: use of undeclared identifier 'start'; did you mean 'stat'?
rtx start; // r13 
    ^~~~~
    stat
/usr/include/x86_64-linux-gnu/sys/stat.h:205:12: note: 'stat' declared here
extern int stat (const char *__restrict __file,
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1083:4: error: expected ';' after expression
rtx v10; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1083:5: error: use of undeclared identifier 'v10'
rtx v10; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1084:4: error: expected ';' after expression
rtx v11; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1084:5: error: use of undeclared identifier 'v11'
rtx v11; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1088:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1088:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1090:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1090:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1091:4: error: expected ';' after expression
rtx scan_start; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1091:5: error: use of undeclared identifier 'scan_start'
rtx scan_start; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1093:4: error: expected ';' after expression
rtx v20; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1093:5: error: use of undeclared identifier 'v20'; did you mean 'v2'?
rtx v20; // rax 
    ^~~
    v2
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1075:15: note: 'v2' declared here
 struct loop *v2; // r15 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1100:4: error: expected ';' after expression
rtx cont; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1100:5: error: use of undeclared identifier 'cont'
rtx cont; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1101:4: error: expected ';' after expression
rtx insn_in_loop; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1101:5: error: use of undeclared identifier 'insn_in_loop'; did you mean 'init_loop'?
rtx insn_in_loop; // r13 
    ^~~~~~~~~~~~
    init_loop
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:401:1: note: 'init_loop' declared here
init_loop ()
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/loop.c:1103:4: error: expected ';' after expression
rtx v30; // rbx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/scan_loop/src/obj/loop.o] Error 1
